--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -133,5 +133,6 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: Bumping version to ${{ env.NEW_VERSION }}
+          branch: main
           file_pattern: "pyproject.toml"
           skip_dirty_check: true
