--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ classifiers = [
 dependencies = [
     "numpy>=2.2.5",
     "pandas>=2.2.3",
+    "scipy>=1.15.3",
+    "sentence-transformers>=4.1.0",
 ]
 
 [project.urls]
