--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -126,7 +126,7 @@ jobs:
           fetch-depth: 0 
 
       - name: Install uv
-        uses: astral-sh/setup-uv@4
+        uses: astral-sh/setup-uv@v4
 
       - name: Bump version
         run: |
